# tppocr2

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
data/: timestamp_pattern.txt  tpp-sword-720p.toml
src/: App.cpp  App.hpp  AppWorker.cpp  AppWorker.hpp  Config.cpp  Config.hpp  InputStream.cpp  InputStream.hpp  OCR.cpp  OCR.hpp  Region.hpp  TextDetector.cpp  TextDetector.hpp  WorkUnit.cpp  WorkUnit.hpp  WorkUnitResource.cpp  WorkUnitResource.hpp  main.cpp  mathutil.cpp  mathutil.hpp
tppocr2/: __main__.py  ocr.py  region.py  stream.py
